# esk8-wizard

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  parttable.csv  sdkconfig
components/FastLED-lite/: CMakeLists.txt
components/FastLED-lite/src/: FastLED.cpp  FastLED.h  controller.h  fastled_config.h  fastled_progmem.h  led_sysdefs.h  lib8tion.h
main/: CMakeLists.txt  Kconfig.projbuild  can.c  can.cpp  can.h  datatypes.h  gap.c  gap.cpp  gap.h  gatt_and_ota.c  gatt_and_ota.cpp  gatt_and_ota.h  idf_component.yml  led_strip.c  led_strip.cpp  led_strip.h  main.c  main.cpp  nvs_stuff.c  nvs_stuff.h  sync.cpp  sync.h  utils.cpp  utils.h
